// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageArguments /> renders correctly 1`] = `
<Relay(DesktopDebateStepPageArguments)
  isStepFinished={false}
  step={
    Object {
      "$refType": null,
      "debate": Object {
        "$fragmentRefs": null,
        "arguments": Object {
          "totalCount": 7,
        },
        "id": "debat-cannabis",
      },
      "noDebate": Object {
        "$fragmentRefs": null,
        "id": "debat-cannabis",
      },
      "timeRange": Object {
        "endAt": "2021-18-02:00:00",
      },
      "timeless": false,
      "yesDebate": Object {
        "$fragmentRefs": null,
        "id": "debat-cannabis",
      },
    }
  }
  viewer={
    Object {
      "$fragmentRefs": null,
      "$refType": null,
    }
  }
/>
`;

exports[`<DebateStepPageArguments /> renders correctly on mobile 1`] = `
<Fragment>
  <MobileDebateStepPageArguments
    debate={
      Object {
        "$fragmentRefs": null,
        "arguments": Object {
          "totalCount": 7,
        },
        "id": "debat-cannabis",
      }
    }
    isStepFinished={false}
    step={
      Object {
        "$refType": null,
        "debate": Object {
          "$fragmentRefs": null,
          "arguments": Object {
            "totalCount": 7,
          },
          "id": "debat-cannabis",
        },
        "noDebate": Object {
          "$fragmentRefs": null,
          "id": "debat-cannabis",
        },
        "timeRange": Object {
          "endAt": "2021-18-02:00:00",
        },
        "timeless": false,
        "yesDebate": Object {
          "$fragmentRefs": null,
          "id": "debat-cannabis",
        },
      }
    }
    viewer={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
      }
    }
  />
</Fragment>
`;

exports[`<DebateStepPageArguments /> renders correctly when no viewer 1`] = `
<Relay(DesktopDebateStepPageArguments)
  isStepFinished={false}
  step={
    Object {
      "$refType": null,
      "debate": Object {
        "$fragmentRefs": null,
        "arguments": Object {
          "totalCount": 7,
        },
        "id": "debat-cannabis",
      },
      "noDebate": Object {
        "$fragmentRefs": null,
        "id": "debat-cannabis",
      },
      "timeRange": Object {
        "endAt": "2021-18-02:00:00",
      },
      "timeless": false,
      "yesDebate": Object {
        "$fragmentRefs": null,
        "id": "debat-cannabis",
      },
    }
  }
  viewer={null}
/>
`;
